Button width amended to avoid horizontal scroll on small devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -189,7 +189,7 @@ html, body {
     padding-top: 15px;
 }
 .btn-more-info {
-    width: 500px;
+    width: 300px;
     font-size: 18px;
     text-transform: uppercase;
     margin: 100px auto 50px;
